Завершена работа над лабой №7 и проведены косметические изменения

--- a/lab1.tex
+++ b/lab1.tex
@@ -24,7 +24,7 @@
 \begin{equation}
     SE = \sqrt{\frac{D[X]_\text{г.с.}}{n}}
 \end{equation}
-где $D[X]_\text{г.с.}$~---~величина среднеквадратического отклонения генеральной совокупности
+где $D[X]_\text{г.с.}$~---~величина дисперсии генеральной совокупности
 
 \textbf{Коэффициент вариации V (относительное стандартное отклонение)} — это стандартная мера дисперсии распределения вероятностей или частотного распределения (выражается в процентах)
 \begin{equation}
