--- a/lab7.tex
+++ b/lab7.tex
@@ -1,11 +1,8 @@
 %!TEX program = xelatex.exe
 \documentclass[14pt,a4paper]{article}
 \input{setup.tex}
-\usepackage{pgfplotstable}
 \usepackage{booktabs}
-\pgfplotstableset{
-every head row/.style={before row=\toprule,after row=\midrule},
-every last row/.style={after row=\bottomrule}}
+\usepackage{pgfplotstable}
 \title{Лабораторная работа №7 \\ \textit{Анализ выборки. Критерий согласия Пирсона.}}
 \begin{document}
 \maketitle
@@ -19,89 +16,105 @@ every last row/.style={after row=\bottomrule}}
 
 Для расчета критического значения критерия $\chi^2_\text{кр.}$ можно воспользоваться специальной таблицей, но лучше и проще всего воспользоваться функцией \texttt{ХИ2.ОБР.ПХ}
 
-Напомню, что в большинстве случаев распределение дискретной случайной величины ($N$) подчиняется формуле Пуассона:
-\begin{equation}
-	P(N) = \frac{\bar{N}^N e^{-\bar{N}}}{N!},
-\end{equation}
-где $\bar{N}$~---~среднее значение. Для расчета этой вероятности можно воспользовать функцией \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D0%BF%D1%83%D0%B0%D1%81%D1%81%D0%BE%D0%BD-%D1%80%D0%B0%D1%81%D0%BF-8fe148ff-39a2-46cb-abf3-7772695d9636}{\texttt{ПУАССОН.РАСП(x;среднее;интегральная)}}, 
-где 
-\verb=x=~---~значение, для которого строится распределение,
-\verb=среднее=~---~среднее арифметическое распределения,
-\verb=интегральная=~---~логическое значение, определяющее форму функции. Если \texttt{ИСТИНА} функция возвращает вероятность того, что количество событий будет меньше, чем N то есть $P(n<N)$, если \texttt{ЛОЖЬ} то, возвращается значение функции взвешенной вероятности, то есть вероятность того, что количество происходящих событий будет ровно $N$ раз. Все аргументы являются обязательными.
+% Напомню, что в большинстве случаев распределение дискретной случайной величины ($N$) подчиняется формуле Пуассона:
+% \begin{equation}
+% 	P(N) = \frac{\bar{N}^N e^{-\bar{N}}}{N!},
+% \end{equation}
+% где $\bar{N}$~---~среднее значение. Для расчета этой вероятности можно воспользовать функцией \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D0%BF%D1%83%D0%B0%D1%81%D1%81%D0%BE%D0%BD-%D1%80%D0%B0%D1%81%D0%BF-8fe148ff-39a2-46cb-abf3-7772695d9636}{\texttt{ПУАССОН.РАСП(x;среднее;интегральная)}}, 
+% где 
+% \verb=x=~---~значение, для которого строится распределение,
+% \verb=среднее=~---~среднее арифметическое распределения,
+% \verb=интегральная=~---~логическое значение, определяющее форму функции. Если \texttt{ИСТИНА} функция возвращает вероятность того, что количество событий будет меньше, чем N то есть $P(n<N)$, если \texttt{ЛОЖЬ} то, возвращается значение функции взвешенной вероятности, то есть вероятность того, что количество происходящих событий будет ровно $N$ раз. Все аргументы являются обязательными.
 
-% \verb=НОРМ.РАСП(x;среднее;стандартное_откл;интегральная)=, где \\
-%     \verb=x=~---~значение, для которого строится распределение. \\
-%     \verb=среднее=~---~среднее арифметическое распределения.\\
-%     \verb=стандартное_откл=~---~стандартное отклонение распределения.\\
-%     \verb=интегральная=~---~логическое значение, определяющее форму функции. Если \verb=ИСТИНА= функция возвращает значение функции распределения $f(x)$, если \verb=ЛОЖЬ= то, возвращается значение функции плотности вероятности $\omega(x)$.
+Для получения нормального распределения используется функция \texttt{НОРМ.РАСП($x$;$\bar{x}$;$\sigma$;интегральная)}, где \\
+	$x$~---~значение, для которого строится распределение. \\
+    $\bar{x}$~---~среднее арифметическое распределения.\\
+    $\sigma$~---~стандартное отклонение распределения.\\
+    \texttt{интегральная}~---~логическое значение, определяющее форму функции. Если \texttt{ИСТИНА} функция возвращает значение функции распределения $f(x)$, если \texttt{ЛОЖЬ} то, возвращается значение функции плотности вероятности $\omega(x)$.
 
-% Все аргументы являются обязательными. Более подробно о синтаксисе этой функции можно узнать \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D0%BD%D0%BE%D1%80%D0%BC-%D1%80%D0%B0%D1%81%D0%BF-edb1cc14-a21c-4e53-839d-8082074c9f8d}{здесь}.
+Последний аргумент является необязательным и по умолчанию стоит как \texttt{ЛОЖЬ}. Более подробно о синтаксисе этой функции можно узнать \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D0%BD%D0%BE%D1%80%D0%BC-%D1%80%D0%B0%D1%81%D0%BF-edb1cc14-a21c-4e53-839d-8082074c9f8d}{здесь}.
 
 \progress{}
 
-\noindent\begin{minipage}{.85\textwidth}
-\section{Проверить выборку на соответствие распределению Пуассона}
+\section{Генерация выборки}
 \noindent\begin{itemize}
-	\item Выделите текст таблицы справа, скопируйте и вставьте в пустое поле таблицы Excel;
-	\item Далее, кликнув по первому столбцу вставленного текста, переходим во вкладку «Данные». Там, в группе инструментов «Работа с данными» кликаем по кнопке «Текст по столбцам»; 
-	\item В открывшемся окне нажимаем <<Далее>>, в списке <<Символов-разделителей>> кликаем на чекбокс <<пробел>>, далее нажимаем <<Готово>>.
-	\item Следующий шаг - получить частоты распределения  Пуассона ($E_i$). Для этого необходимо воспользоваться функцией \texttt{ПУАССОН.РАСП}. Нужно рассчитать вероятность ($P_i$) для каждого $N$ и получить столбец вероятностей. Остаётся открытым вопрос, откуда брать \verb=среднее= ($\bar{N}$)? Его можно подобрать вручную построив два графика в одних координатах  $E_i(N)$ и $O_i(N)$, и добившись их наилучшего соответствия;
+	% \item Сгенерируйте выборку с помощью программы \texttt{NormDistGen.exe}. После запуска программы в той же папке появится новый файл;
+	\item Создайте файл с расширением \texttt{.xlsm}. По умолчанию вкладка \texttt{Разработчик} спрятана, поэтому надо её включить. Заходим по пути \texttt{Файл$\rightarrow$Параметры$\rightarrow$Настроить ленту} и ставим галочку на вкладке \texttt{Разработчик};
+	\item В разделе \texttt{Разработчик} нажмите на \texttt{макросы}, дайте любое название макроса и создайте его. Далее в открывшемся окне введите код из листинга \ref{NormDistGen};
+	\lstset{ %
+	language=[Visual]Basic,
+	keywordstyle=\color{brown},          % Стиль ключевых слов
+	breaklines=true,
+	commentstyle=\color{gray}, % white comments
+	numbers=left, 
+	backgroundcolor=\color{lightgray!5!white},
+	tabsize=4,
+	texcl=true
+	} 
+	\begin{lstlisting} 
+	Sub NormDistGen()
+		' Сюда надо поместить код из листинга
+	End Sub  
+	\end{lstlisting}
+	\item При запуске кода в первом столбце таблицы появится сгенерированная выборка объёмом 500 элементов;
 \end{itemize}
-\end{minipage}
-\begin{minipage}{.1\textwidth}
-\pgfplotstabletypeset[
-	col sep=comma,
-	columns/0/.style={column name={N}},
-	columns/1/.style={column name={$O_i$}},
-]{PoissonDistrib.csv}
-\end{minipage}
+\section{Получение наблюдаемых и ожидаемых частот}	
 \begin{itemize}
-	\item Чтобы найти ожидаемые (теоретические) частоты $E_i$ нужно умножить соответствующие вероятности ($P_i$) на объём выборки, то есть на $\sum\limits_i^{18} O_i$. Ож. частоты $E_i$ должны быть целыми ненулевыми числами, поэтому стоит использовать функцию \texttt{ОКРУГЛ};
-	\item Используя формулу \ref{PoissonDistrib} посчитать критерий Пирсона (увы, функции Excel для этой формулы нет);
-	\item Используя функцию \texttt{ХИ2.РАСП} постройте график плотности распределения $\omega(\chi_\text{кр.}^2)$ (последний параметр должен быть \verb=ЛОЖЬ=);
+	\item Найдём максимальный и минимальный элементы выборки с помощью функций МАКС и МИН соответственно. 
+	\item Создайте столбец из целых чисел, значения которого будут использованы в качестве границ интервалов ($N$). Первое и последнее числа столбца должны быть больше минимального и максимального значения выборки соответственно. 
+	
+	\textit{Пример. Если $x_{min} = -0,961$ и $x_{max} = 25,983$ то получится столбец от 0 до 26 с шагом 1};
+
+	\item Следующий шаг~---~получить частоты попадания элементов выборки в эти интервалы. Для этого необходимо воспользоваться функцией \href{https://support.microsoft.com/ru-ru/office/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D1%8F-%D1%87%D0%B0%D1%81%D1%82%D0%BE%D1%82%D0%B0-44e3be2b-eca0-42cd-a3f7-fd9ea898fdb9}{\texttt{ЧАСТОТА(массив данных; массив верхних границ диапазонов)}}. Перед тем как задавать функцию нужно выделить диапазон ячеек, размер которого соответствует размеру массива границ. После нажатия комбинации \texttt{CTRL+SHIFT+ENTER} сформируется массив частот $O(N)$;
+	\item Постройте график зависимости массива частот $O$ от массива границ $N$;
+	\item Теперь нужно получить столбец $E(N)$. Перед этим нужно посчитать столбец вероятностей  ($P_i$) для каждого $N$ с помощью функции \texttt{НОРМ.РАСП} с пустым последним параметром. Остаётся открытым вопрос, откуда брать среднее ($\bar{N}$) и $\sigma$? Эти параметры можно подобрать вручную построив два графика в одних координатах $E(N)$ и $O(N)$, и добившись их наилучшего соответствия;
+	\item Чтобы найти ожидаемые (теоретические) частоты $E_i$ нужно умножить соответствующие вероятности ($P_i$) на объём выборки, то есть на 500. Ож. частоты $E_i$ должны быть целыми ненулевыми числами, поэтому стоит использовать функцию \texttt{ОКРУГЛВВЕРХ};
+\end{itemize}
+\section{Оценка критерия Пирсона}
+\begin{itemize}
+	\item Используя формулу \ref{PoissonDistrib} посчитать критерий Пирсона;
+	\item Используя функцию \texttt{ХИ2.РАСП} постройте график плотности распределения $\omega_{\chi_\text{кр.}^2}(N)$ (последний параметр должен быть \verb=ЛОЖЬ=);
 	\item В отдельном столбце посчитать критическое значение пользуясь функцией \texttt{ХИ2.ОБР.ПХ}. Указать это значение на графике $\omega(\chi_\text{кр.}^2)$. Сравнить полученное значение с экспериментальным;
 	\item Получить p-value используя функцию \texttt{ХИ2.РАСП.ПХ} для посчитанного $\chi^2$
+	\item Чтобы убедится в правильности полученного результата сравните p-value со значением функции \texttt{ХИ2.ТЕСТ}, которая принимает на вход массивы наблюдаемых и ожидаемых частот.    
 \end{itemize}
-
-% \pgfplotstabletypeset[
-% col sep=comma,
-% % columns/inde/.append style={
-%     string type,
-%     string replace*={.}{,},
-% 		% column name = {\textbf{C}${}_\mathbf{P}$},
-% 	% },
-% columns={A,B,A,B},
-% display columns/0/.style={select equal part entry of={0}{2}},% first part of `A'
-% display columns/1/.style={select equal part entry of={1}{2}},% first part of `B'
-% % display columns/2/.style={select equal part entry of={1}{2}},% second part of `A'
-% % display columns/3/.style={select equal part entry of={1}{2}},% second part of `B'
-% ]
-% {data.csv}
-
-% \begin{center} % Клатрат SnPI
-% 	\pgfplotstabletypeset[
-% 	mytable,
-% 	expheatcapfive,
-% 	col sep=comma,
-% 	columns/C/.append style={
-%     string type,
-%     string replace*={.}{,},
-% 		% divide by = 4461.58954, %Перевод значений из молярной теплоёмкости в удельную
-% 		column name = {\textbf{C}${}_\mathbf{P}$},
-% 	},
-% 	begin table=\begin{longtable},
-% 	every head row/.append style={
-% 			before row={ \caption{Молярная теплоёмкость клатрата \snpi{} $\mathrm{C_P(T)}$, Дж/(моль$\cdot$К)} \label{ExpValHeatCapSnPIAppendix} \\ \hline}%
-% 	},
-% 	end table=\end{longtable}
-% 	]{Dissertation/chapter3/images/MolHeatCapSn24P193I8.csv}
-% \end{center}
 
 \questions{}
 \begin{enumerate}
 	\item Сформулируйте нулевую гипотезу $H_0$. Назовите условие, при котором можно отклонить нулевую гипотезу.
-	\item Вывести дисперсию распределение Пуассона (D[N]).
+	% \item Вывести дисперсию распределение Пуассона (D[N]).
+	\item Можно ли в программе Excel сгенерировать выборку имеющую нормальное распределение? Если можно, то как это можно реализовать? %=НОРМОБР(СЛЧИС();сред.;стоткл)
 	\item Что такое p-value (p-значение)? Чему численно равно это значение?
 	\item В каких случаях используется функция \texttt{ХИ2.ОБР}? Что она позволяет оценить
 \end{enumerate}
+\begin{center}
+	\textbf{\Large Приложение}
+\end{center}
+\lstset{ %
+	language=[Visual]Basic,
+	keywordstyle=\color{brown},          % Стиль ключевых слов
+	breaklines=true,
+	numbers=left, 
+	backgroundcolor=\color{lightgray!5!white},
+	tabsize=4,
+	label=NormDistGen, 
+	caption={Код генератора выборки с нормальным распределением}
+	} 
+	\renewcommand{\lstlistingname}{Листинг}
+\begin{lstlisting}
+	Dim i As Long
+	Dim mean As Integer
+	Dim sigma As Integer
+	Dim random As Double
+
+	mean = 10 * Rnd + 6
+	sigma = 3 * Rnd + 2
+	i = 501
+	Range("A1").Select
+	For i = 2 To i
+		random = WorksheetFunction.NormInv(Rnd, mean, sigma)
+		ActiveCell.Value = random
+		ActiveCell.Offset(1, 0).Select
+	Next i
+	\end{lstlisting}
 \end{document}
