Доработка нескольких работ

--- a/lab10.tex
+++ b/lab10.tex
@@ -25,13 +25,20 @@
 \section{Построение распределений дискретных случайных величин}
 % Для указанных значений параметров вычислите и постройте графически биномиальное, геометрическое и пуассоновское распределение. Вычислить вероятность попадания СВ в указанный интервал.   
 \noindent\begin{enumerate}
-	\item Построите биномиальное распределение для серии из 20 независимых испытаний с вероятностью успеха $p = 0,6$. Постройте графики плотности распределения и функции распределения. Найдите значение k, для которой $P(X=k)$ максимальна. Вычислите вероятность попадания случайной величины в интервал (1,5).
-	\item Постройте графики плотности распределения и функции распределения для геометрического распределения, если $p=0,4$,  $\eta \in [0,20]$. Найдите наиболее вероятное значение $\eta_\text{наиб.}$. Вычислите вероятность попадания случайной величины в интервал (1,5).
+	\item Построите биномиальное распределение для серии из 20 независимых испытаний с вероятностью успеха $p = 0,6$. Постройте графики плотности распределения и функции распределения. Найдите значение k, для которой $P(X=k)$ максимальна. Вычислите вероятность попадания случайной величины в интервал (1,5);
+	\item Постройте графики плотности распределения и функции распределения для геометрического распределения, если $p=0,4$,  $\eta \in [0,20]$. Найдите наиболее вероятное значение $\eta_\text{наиб.}$. Вычислите вероятность попадания случайной величины в интервал (1,5);
 	\item Проделайте все то же самое, что и пункте 1 и 2 для распределения Пуассона с параметрами $\bar{n}=5$, $k \in [0,20]$. 
 \end{enumerate}
 
-\section{Построение распределений непрерывных случайных величин}
-Постройте графики плотности распределения и функции распределения Стьюдента с $n = 2, 5, 10$ степеням свободы и нормального распределения ($\bar{x} = 0, \sigma=1$). 
+% \section{Построение распределений непрерывных случайных величин}
+% Постройте графики плотности распределения и функции распределения Стьюдента с $n = 2, 5, 10$ степеням свободы и нормального распределения ($\bar{x} = 0, \sigma=1$). 
+
+\section{Построение гистограмм на основе эмпирического распределения}
+\noindent \begin{enumerate}
+	\item Получить массив значений используя функцию \texttt{rnorm(k, \textmu, \textsigma)};
+	\item Найти максимальное, минимальное значения и размах выборки пользуясь функциями \texttt{max} и \texttt{min};
+	\item %TODO:
+\end{enumerate}
 
 \questions{}
 Приведите примеры распределений
