--- a/lab2.tex
+++ b/lab2.tex
@@ -10,26 +10,40 @@
 \end{equation}
 где $\left | \frac{\partial f(x_1, x_2, \ldots, x_n)}{\partial x} \right |_{x_2, \ldots, x_n}$~---~частная производная по $x_1$ при постоянных $x_2, \ldots, x_n$.
 
-\textbf{Пример}
-Студент хочет измерить мощность силы, которая заставляет кирпич равномерно двигаться вверх по наклонной плоскости. Проведя теоретические расчёты студент получил рабочую формулу $N = F\upsilon\cos{\alpha}$, где $F, \upsilon, \alpha$~---~величины, получаемые в результате прямых измерений.
-
+\textbf{Пример.}
+Студент хочет измерить мощность силы, которая заставляет кирпич равномерно двигаться вверх по наклонной плоскости. Проведя теоретические расчёты студент получил рабочую формулу $N = F\upsilon\cos{\alpha}$, где $F, \upsilon, \alpha$~---~величины, получаемые в результате прямых измерений. Применив формулу \ref{indirectError} найдём частные производные:
+\begin{gather*}
+    \left | \frac{\partial N(F, \upsilon, \alpha)}{\partial F} \right |_{\upsilon, \alpha} = \upsilon\cos{\alpha} ; \\
+    \left | \frac{\partial N(F, \upsilon, \alpha)}{\partial \upsilon} \right |_{F, \alpha} = F\cos{\alpha} ; \\
+    \left | \frac{\partial N(F, \upsilon, \alpha)}{\partial \alpha} \right |_{F, \upsilon} = F\upsilon\sin{\alpha}.
+\end{gather*}
+И тогда абсолютная погрешность мощности будет определяться по формуле:
+\begin{equation*}
+    \Delta N = \upsilon\Delta F\cos{\alpha} + F\Delta \upsilon\cos{\alpha} + F\upsilon\Delta\alpha\sin{\alpha},
+\end{equation*}
+где $\Delta\alpha$ измеряется в радианах ($1^\circ \sim \pi/180$).
 \progress{}
 \section{}
 Используя формулу \ref{indirectError} рассчитать абсолютную погрешность для следующих физических зависимостей:
-$H(I,R,\alpha) = \frac{NI}{2R\cdot tg\alpha}$, $\frac{q}{m}(U_A, B_\text{кр.}, r_A, r_K) = \frac{8U_A}{B_\text{кр.}r_A^2(1-r_K/r_A)^2}$. \\
+$H(I,R,\alpha) = \frac{NI}{2R\cdot tg\alpha}$, $Z(R,\omega, C) = \sqrt{R^2+\left (\cfrac{1}{\omega C} \right )^2}$. \\
 \section{}
 \begin{enumerate}
-    \item Создать таблицу. Верхнюю строчку отвести под название выбранной лабораторной работы (Например: <<Определение плотности образца>>, <<Определение  коэффициента вязкости жидкости  методом стокса>>, <<Определение радиуса кривизны вогнутой поверхности методом катающегося шара>> );
+    \item Создать таблицу. Верхнюю строчку отвести под название выбранной лабораторной работы (Например: <<Определение плотности образца>>, <<Определение  коэффициента вязкости жидкости  методом Стокса>>, <<Определение радиуса кривизны вогнутой поверхности методом катающегося шара>> );
     \item Заполнить первые колонки (не менее трёх колонок) результатами \textbf{прямых} измерений.
     \item Составьте столбец из косвенно измеренных значений $f(x_1, x_2, \ldots, x_n)$;
     \item Найти формулу погрешности косвенных измерений $\Delta f(x_1, x_2, \ldots, x_n)$ используя уравнение \ref{indirectError} и $f(x_1, x_2, \ldots, x_n)$. 
     \item В отдельных колонках по формулам рассчитать абсолютную и относительную погрешность косвенного измерения ($\delta  = \frac{\Delta f(x_1, x_2, \ldots, x_n)}{f(x_1, x_2, \ldots, x_n)}$);
 \end{enumerate}
 
-Контрольные вопросы \\
+\questions{}
 \begin{enumerate}
+    \item Что такое аддитивная и мультипликативная погрешность измерения?
     \item Что такое погрешность косвенных измерений? Как находят эту погрешность?
     \item Что такое совместные и совокупные измерения? Приведите примеры.
 \end{enumerate}
-\input{method.tex}
+
+\textbf{Методические рекомендации к заданию для обучающихся:} 
+
+Результаты выполнения задания оформляются в тетради, или на листочке, а также в файле с расширением ".xlsx"
+% \input{method.tex}
 \end{document}
