--- a/lab9.tex
+++ b/lab9.tex
@@ -13,7 +13,7 @@
 	\item Постройте параметрический график \\
 	$x=16\sin^3t$ \\
 	$y=13\cos{t} - 5\cos{2t} - 2\cos{3t} - \cos{4t}$
-	\item Подберите параметрические уравнения и постройте график спирали в декартовой системе координат. \textbf{Подсказка: задайте положительную область определения и модифицируйте параметрический график из пункта 1}\\
+	\item Подберите параметрические уравнения и постройте график спирали в декартовой системе координат. \textbf{Подсказка: задайте положительную область определения параметра t и модифицируйте параметрический график из пункта 1}\\
 	\begin{tikzpicture}
 		\begin{axis}[
 			trig format plots=rad,
@@ -23,7 +23,7 @@
 		\addplot [smooth, domain=0:16*pi, samples=200, orange] ({x*sin(x)}, {x*cos(x)});
 		\end{axis}
 	\end{tikzpicture}
-	\item Построить в полярной системе координат график функции $R(\phi) = a·\cos{(m·\phi)}$, где $a = 2$, $m = 4$, $\phi$ меняется в пределах от $-π$ до $+π$ с шагом $0,01·π$.
+	\item Построить в полярной системе координат график функции $R(\phi) = a\cdot\cos{(m\cdot\phi)}$, где $a = 2$, $m = 4$, $\phi$ меняется в пределах от $-\pi$ до $+\pi$ с шагом $0,01\cdot\pi$.
 \end{enumerate}
 
 \section{Работа с 3D-графиками}
