--- a/setup.tex
+++ b/setup.tex
@@ -7,6 +7,7 @@
 %     % hidelinks
 % ]{hyperref}
 %%%%%%%%%%%%%%Пользовательские команды%%%%%%%%%
+\usepackage[euler]{textgreek}
 \usepackage{calc}
 \usepackage{color}
 \usepackage{listing}
