--- a/lab2.tex
+++ b/lab2.tex
@@ -24,7 +24,7 @@
 где $\Delta\alpha$ измеряется в радианах ($1^\circ \sim \pi/180$).
 \progress{}
 \section{}
-Используя формулу \ref{indirectError} рассчитать абсолютную погрешность для следующих физических зависимостей:
+Используя формулу \ref{indirectError} получить формулу абсолютной погрешности для следующих физических зависимостей:
 $H(I,R,\alpha) = \frac{NI}{2R\cdot tg\alpha}$, $Z(R,\omega, C) = \sqrt{R^2+\left (\cfrac{1}{\omega C} \right )^2}$. \\
 \section{}
 \begin{enumerate}
