--- a/lab3.tex
+++ b/lab3.tex
@@ -10,6 +10,7 @@
 \begin{center}
     Ход работы:
 \end{center}
+\section{}
 \begin{enumerate}
     \item Сгенерировать массив из 5 целых случайных чисел от 1 до 30, расположить его в ряд таблицы Excel;
     \item Сгенерировать ещё 4 ряда таких же массивов до квадратной матрицы;
@@ -18,11 +19,23 @@
     \item Найти обратную матрицу (1. выделить диапазон 5 х 5, который не пересекается с исходным диапазоном; 2. В строке формул ввести формулу \texttt{МОБР(диапазон исх. матрицы)} и нажать комбинацию клавиш \texttt{CTRL+SHIFT+ENTER});
     \item Проверить результат перемножив исходную и обратную матрицы и отобразив отдельно результат.
 \end{enumerate}
+\section{}
+Докажите, что матрица $P$ идемпотентна, то есть для неё выполняется условие $P^2 = P$. 
+% Вычислите ее
+Покажите, что матрица $I = 2P - E$ инволютивна ($I^2 = E$), здесь $E$~---~единичная матрицы.
+\begin{equation}
+    P = \begin{pmatrix}
+        -26 & -18 & -27 \\
+        21 & 15 & 21 \\
+        12 & 8 & 13 \\
+    \end{pmatrix}.
+\end{equation}
 }
 
 \questions{}
 \begin{enumerate}
     \item Какая функция (набор функций) используется может быть использована для получения случайного числа?
+    \item В каком случае матрица называется ортогональной?
     \item По какому алгоритму находят обратную матрицу $A^{-1}$?
 \end{enumerate}
 % \input{method.tex}
