--- a/lab6.tex
+++ b/lab6.tex
@@ -94,7 +94,8 @@ x\textsubscript{2},\ldots,x\textsubscript{n} --} неизвестные вели
 \begin{equation} \label{Xmatrix}
     X = A^{-1}\times B,
 \end{equation}
-где $A^{-1}$~---~обратная матрица матрицы $A$ (в Excel используется функция  \verb=МОБР=). Для перемножения матриц используется функция \verb=МУМНОЖ= (проще всего начать вводить функцию и нажать на \verb=TAB=).
+где $A^{-1}$~---~обратная матрица матрицы $A$. % (в Excel используется функция  \verb=МОБР=).
+Для перемножения матриц используется функция \verb=МУМНОЖ= (проще всего начать вводить функцию и нажать на \verb=TAB=).
 
 Другими словами, чтобы найти матрицу, состоящую из неизвестных величин, нужно найти обратную матрицу матрицы, состоящей из числовых коэффициентов, а потом перемножить её с матрицей из свободных членов. Помните, что перемножение матриц \emph{некоммутативно}!
 
