--- a/literature.bib
+++ b/literature.bib
@@ -7,6 +7,19 @@
     language = {russian}
 }
 
+@book{Stepanova2014,
+    title = {Основы обработки результатов измерений},
+    subtitle = {учеб. пособие},
+    author={Степанова, Е. А. and Скулкина, Н. А. and Волегов, А. С.},
+    editor = {Степановой, Е. А.},
+    publisher = {Изд-во Урал. ун-т},
+    location = {Екатеринбург},
+    year = {2014},
+    pagetotal = {95},
+    language = {russian},
+    isbn = {978-5-7996-1331-0}
+}
+
 @book{Plis2003,
   title     = {Mathcad. Математический практикум для инженеров и экономистов},
   subtitle = {учеб. пособие},
